refactor(Lotto): 테스트 중복 제거